trunk/Archive2/9d/79268b1db9234c/output
main.cpp:12:7: error: 'foo' is a private member of 'X'
    x.foo(0.0);
    ~~^~~
main.cpp:6:10: note: declared private here
    void foo(double) { } // #2
         ^
1 error generated.
